--- a/Products.html
+++ b/Products.html
@@ -57,9 +57,9 @@
     <!-- Products -->
     <section class="p-4 text-center">
         <h1 class="font-bold mt-5 text-3xl">Our Products</h1>
-        <input type="text" placeholder="Search for a Product..." class="border border-black mt-5 p-2"
+        <input id="search" type="text" placeholder="Search for a Product..." class="border border-black mt-5 p-2"
             style="width: 80%;">
-        <div class="grid md:grid-cols-4 grid-cols-2 mt-5 gap-5">
+        <div id="product-container" class="grid md:grid-cols-4 grid-cols-2 mt-5 gap-5">
             <div>
                 <img src="img/img2.jpg" class="inline hover:shadow-xl transform hover:translate-y-2">
                 <h1>Button Rose Plant</h1>
